logs/mobility/build.make.016.log.stderr
/home/swarmie/rover_workspace/src/mobility/src/mobility.cpp:3:1: error: ‘import’ does not name a type
 import rospy
 ^
/home/swarmie/rover_workspace/src/mobility/src/mobility.cpp: In function ‘int main(int, char**)’:
/home/swarmie/rover_workspace/src/mobility/src/mobility.cpp:173:19: error: ‘Py_Initialize’ was not declared in this scope
     Py_Initialize();
                   ^
/home/swarmie/rover_workspace/src/mobility/src/mobility.cpp:174:60: error: ‘PyRun_SimpleString’ was not declared in this scope
     PyRun_SimpleString("print('@@@@@@@@@@@@@@@@@@@@@@@@@')");
                                                            ^
/home/swarmie/rover_workspace/src/mobility/src/mobility.cpp:175:17: error: ‘Py_Finalize’ was not declared in this scope
     Py_Finalize();
                 ^
/home/swarmie/rover_workspace/src/mobility/src/mobility.cpp: In function ‘void mobilityStateMachine(const ros::TimerEvent&)’:
/home/swarmie/rover_workspace/src/mobility/src/mobility.cpp:373:27: error: ‘angles’ has not been declared
             else if (fabs(angles::shortest_angular_distance(currentLocation.theta, goalLocation.theta)) > rotateOnlyAngleTolerance) {
                           ^
/home/swarmie/rover_workspace/src/mobility/src/mobility.cpp:377:27: error: ‘angles’ has not been declared
             else if (fabs(angles::shortest_angular_distance(currentLocation.theta, atan2(goalLocation.y - currentLocation.y, goalLocation.x - currentLocation.x))) < M_PI_2) {
                           ^
/home/swarmie/rover_workspace/src/mobility/src/mobility.cpp:396:30: error: ‘angles’ has not been declared
             float errorYaw = angles::shortest_angular_distance(currentLocation.theta, goalLocation.theta);
                              ^
/home/swarmie/rover_workspace/src/mobility/src/mobility.cpp:399:22: error: ‘angles’ has not been declared
             if (fabs(angles::shortest_angular_distance(currentLocation.theta, goalLocation.theta)) > rotateOnlyAngleTolerance) {
                      ^
/home/swarmie/rover_workspace/src/mobility/src/mobility.cpp:417:30: error: ‘angles’ has not been declared
             float errorYaw = angles::shortest_angular_distance(currentLocation.theta, goalLocation.theta);
                              ^
/home/swarmie/rover_workspace/src/mobility/src/mobility.cpp:420:22: error: ‘angles’ has not been declared
             if (fabs(angles::shortest_angular_distance(currentLocation.theta, atan2(goalLocation.y - currentLocation.y, goalLocation.x - currentLocation.x))) < M_PI_2) {
                      ^
/home/swarmie/rover_workspace/src/mobility/src/mobility.cpp:425:27: error: ‘angles’ has not been declared
             else if (fabs(angles::shortest_angular_distance(currentLocation.theta, goalLocation.theta)) > 0.1) {
                           ^
make[2]: *** [CMakeFiles/mobility.dir/src/mobility.cpp.o] Error 1
make[1]: *** [CMakeFiles/mobility.dir/all] Error 2
make: *** [all] Error 2
